# Aula_novatos

./: README.md  pyproject.toml
.trunk/: trunk.yaml
src/aula_novatos/: exercice_32.py  exercice_33.py  exercice_34.py  exercice_35.py  exercice_36.py  exercice_37.py  exercice_38.py  exercice_39.py  exercice_4.py  exercice_40.py  exercice_43.py  exercice_46.py  exercice_47.py  exercice_5.py  exercice_6.py  grade_school.py  problem_1.py  problem_2,py  problem_2.py  problem_6.py  roman_problem.py
tests/: test_exercice_32.py  test_exercice_33.py  test_exercice_34.py  test_exercice_35.py  test_exercice_36.py  test_exercice_37.py  test_exercice_38.py  test_exercice_39.py  test_exercice_4.py  test_exercice_40.py  test_exercice_43.py  test_exercice_46.py  test_exercice_47.py  test_exercice_5.py  test_exercice_6.py  test_grade_school.py  test_problem_1.py  test_problem_2.py
