[project]
name = "aula_novatos"
version = "0.1.0"
description = ""
authors = [
    {name = "marcoajt",email = "marcoantoniojt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "typing-extensions (>=4.15.0,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "complexipy (>=4.2.0,<5.0.0)",
    "radon (==5.1)",
    "ruff (>=0.14.3,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
